# rtsp-viewer

./: .gitignore  Makefile  README.md  audio.py  cameras.yaml  config.py  gui.py  logger.py  main.py  pyproject.toml  recorder.py  state.py  stream.py  stream_manager.py  unified_stream.py  viewer.py
src/rtsp_viewer/: __init__.py  __main__.py  cli.py
src/rtsp_viewer/core/: __init__.py  gst_simulator.py  gst_streamer.py  recorder.py  simulator.py  streamer.py  unified_stream.py  viewer.py
src/rtsp_viewer/ui/: __init__.py  gui.py  simulator_gui.py  streamer_gui.py
src/rtsp_viewer/utils/: __init__.py  state.py
