[project]
name = "rtsp-viewer"
version = "0.1.0"
description = "A world-class RTSP stream viewer and recorder using OpenCV and ffmpeg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
]

[project.scripts]
rtsp-viewer = "rtsp_viewer.cli:main"
rtsp-simulator = "rtsp_viewer.core.simulator:run_simulator_cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtsp_viewer"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
